output_10.1.168/blas_magma.cu.outputdata.txt
find: unknown predicate `-cuda-path=/sw/summit/cuda/10.1.168'
/tmp/blas_magma.cu-a5a19f.hip:39:33: warning: CUDA identifier is unsupported in HIP.
    if ( ptr_attr.memoryType == cudaMemoryTypeDevice ) {
                                ^
/tmp/blas_magma.cu-a5a19f.hip:50:41: warning: CUDA identifier is unsupported in HIP.
    }  else if ( ptr_attr.memoryType == cudaMemoryTypeHost ) {
                                        ^
/tmp/blas_magma.cu-a5a19f.hip:82:33: warning: CUDA identifier is unsupported in HIP.
    if ( ptr_attr.memoryType == cudaMemoryTypeDevice ) {
                                ^
/tmp/blas_magma.cu-a5a19f.hip:84:41: warning: CUDA identifier is unsupported in HIP.
    }  else if ( ptr_attr.memoryType == cudaMemoryTypeHost ) {
                                        ^
/tmp/blas_magma.cu-a5a19f.hip:141:33: warning: CUDA identifier is unsupported in HIP.
    if ( ptr_attr.memoryType == cudaMemoryTypeDevice )
                                ^
/tmp/blas_magma.cu-a5a19f.hip:165:41: warning: CUDA identifier is unsupported in HIP.
    }  else if ( ptr_attr.memoryType == cudaMemoryTypeHost ) {
                                        ^
/tmp/blas_magma.cu-a5a19f.hip:209:33: warning: CUDA identifier is unsupported in HIP.
    if ( ptr_attr.memoryType == cudaMemoryTypeDevice ) {
                                ^
/tmp/blas_magma.cu-a5a19f.hip:211:41: warning: CUDA identifier is unsupported in HIP.
    }  else if ( ptr_attr.memoryType == cudaMemoryTypeHost ) {
                                        ^
In file included from <built-in>:1:
/sw/summit/hip/hip2.6-cuda10.1.168/llvm/lib/clang/8.0.1/include/__clang_cuda_runtime_wrapper.h:66:2: error: "Unsupported CUDA version!"
#error "Unsupported CUDA version!"
 ^
8 warnings and 1 error generated when compiling for host.
Error while processing /tmp/blas_magma.cu-a5a19f.hip.

[HIPIFY] info: file './quda/lib/blas_magma.cu' statistics:

  ERROR: Statistics is invalid due to failed hipification.

  CONVERTED refs count: 12
  UNCONVERTED refs count: 8
  CONVERSION %: 60
  REPLACED bytes: 264
  TOTAL bytes: 12680
  CHANGED lines of code: 9
  TOTAL lines of code: 343
  CODE CHANGED (in bytes) %: 2
  CODE CHANGED (in lines) %: 3
  TIME ELAPSED s: 0.55
[HIPIFY] info: CONVERTED refs by type:
  addressing: 4
  type: 4
  numeric_literal: 4
[HIPIFY] info: CONVERTED refs by API:
  CUDA RT API: 12
[HIPIFY] info: CONVERTED refs by names:
  cudaErrorInvalidValue: 4
  cudaPointerAttributes: 4
  cudaPointerGetAttributes: 4
[HIPIFY] info: UNCONVERTED refs by type:
  numeric_literal: 8
[HIPIFY] info: UNCONVERTED refs by API:
  CUDA RT API: 8
[HIPIFY] info: UNCONVERTED refs by names:
  cudaMemoryTypeDevice: 4
  cudaMemoryTypeHost: 4
